# StatisticsStudy

./: .gitignore  Untitled.ipynb  pyproject.toml
docker/: .shell.swp  Dockerfile  docker-compose.yaml
notebook/: LSM.ipynb  Untitled.ipynb  Untitled1.ipynb
notebook/.ipynb_checkpoints/: LSM-checkpoint.ipynb  Untitled1-checkpoint.ipynb
notebook/Practices/: 2章.ipynb  Untitled.ipynb
notebook/Practices/統計学入門/: 10章_正規分布からの標本.ipynb  11章.ipynb  12章.ipynb  7章.ipynb  8章_中心極限定理.ipynb  8章_大数の法則.ipynb  9章.ipynb  Untitled.ipynb
notebook/Practices/統計学入門/.ipynb_checkpoints/: 10章_正規分布からの標本-checkpoint.ipynb  8章_中心極限定理-checkpoint.ipynb  8章_大数の法則-checkpoint.ipynb
notebook/Practices/統計学基礎/: 2章.ipynb  3章.ipynb
notebook/Practices/自然科学の統計学/: 3章.ipynb  4章.ipynb  5章.ipynb  8章.ipynb  Untitled.ipynb  Untitled3.ipynb  Untitled4.ipynb  d.csv  ガンマ分布.ipynb
notebook/analysis/: Untitled.ipynb  data_analysis.ipynb  密度費推定.ipynb
notebook/books/: Untitled1.ipynb
notebook/books/.ipynb_checkpoints/: 1sho-checkpoint.ipynb
notebook/books/polars100nock/: 前半.ipynb
notebook/books/セキュリティエンジニアのための機械学習/: .~lock.HostLogons-demo.csv#  6章.ipynb
notebook/books/多変量解析入門/3.非線形回帰/: Bスプライン.ipynb  多項式回帰.ipynb  章末問題.ipynb
notebook/books/統計学入門/: 10章_正規分布からの標本.ipynb
notebook/books/統計学入門/.ipynb_checkpoints/: 7章-checkpoint.ipynb  9章-checkpoint.ipynb
notebook/books/統計学基礎/: 1sho.ipynb
notebook/books/自然科学の統計学/: ガンマ分布.ipynb
notebook/books/計量時系列/: 1章.ipynb  2章.ipynb  3章.ipynb  4章.ipynb  5章.ipynb  6章.ipynb
notebook/model/1dcnn/: 1dcnn.ipynb  kabyku.ipynb
notebook/tmp/: THURSDAY.csv  Untitled.ipynb  WEDNESDAY.csv  sample.csv  utils.txt
src/: F.py
