[tool.poetry]
name = "godaddy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "^1.23.5"
jupyterlab = "^3.5.3"
polars = "^0.15.18"

# machine learning
matplotlib = "^3.6.3"
plotly = "^5.13.0"
seaborn = "^0.12.2"







[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
