[tool.poetry]
name = "godaddy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
numpy = "^1.23.5"
jupyterlab = "^3.5.3"
polars = "^0.15.18"

# machine learning
matplotlib = "^3.6.3"
plotly = "^5.13.0"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
xlsx2csv = "^0.8.1"
xlrd = "^2.0.1"
#pyarrow = "^11.0.0"
statsmodels = "^0.13.5"
sktime = "^0.16.1"
ipywidgets = "^8.0.4"
#pystan = "^3.6.0"
#libpython = "^0.2"
prophet = "^1.1.2"

## pytorch
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"


## cuda 
cupy-cuda11x = "^11.5.0"
numba = "^0.56.4"
fsspec = "^2023.1.0"
rmm-cu11 = { url = "https://developer.download.nvidia.com/compute/redist/rmm-cu11/rmm_cu11-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
cubinlinker-cu11 = { url = "https://developer.download.nvidia.com/compute/redist/cubinlinker-cu11/cubinlinker_cu11-0.3.0.post1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
ptxcompiler-cu11 = { url = "https://developer.download.nvidia.com/compute/redist/ptxcompiler-cu11/ptxcompiler_cu11-0.7.0.post1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
cudf-cu11 = { url = "https://developer.download.nvidia.com/compute/redist/cudf-cu11/cudf_cu11-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
cuml-cu11= { url = "https://developer.download.nvidia.com/compute/redist/cuml-cu11/cuml_cu11-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
pylibraft-cu11= { url = "https://developer.download.nvidia.com/compute/redist/pylibraft-cu11/pylibraft_cu11-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
raft-dask-cu11 = { url = "https://developer.download.nvidia.com/compute/redist/raft-dask-cu11/raft_dask_cu11-22.12.0.post1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
ucx-py-cu11= { url = "https://developer.download.nvidia.com/compute/redist/ucx-py-cu11/ucx_py_cu11-0.29.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
dask-cudf-cu11= { url = "https://developer.download.nvidia.com/compute/redist/dask-cudf-cu11/dask_cudf_cu11-22.12.0.post1-py3-none-any.whl" }
cugraph-cu11={url = "https://developer.download.nvidia.com/compute/redist/cugraph-cu11/cugraph_cu11-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pylibcugraph-cu11={url = "https://developer.download.nvidia.com/compute/redist/pylibcugraph-cu11/pylibcugraph_cu11-22.12.0-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
pynvml = "^11.4.1"
distributed = "2022.11.1"
dask-cuda = "^22.12.0"
treelite-runtime = "3.0.1"
treelite = "3.0.1"
xgboost = "1.6.2"
catboost = "^1.1.1"
tqdm = "^4.64.1"
ipympl = "^0.9.2"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.0"
mlflow = "^2.1.1"
torchinfo = "^1.7.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
